--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,18 @@
 <resources>
     <string name="app_name">Habit Tracker</string>
     <string name="action_settings">Settings</string>
-    <string name="todayHeader">Today</string>
+    <string name="todayHeader">Today\'s habits</string>
     <string name="addHabitButton">Add New Habit</string>
+    <string name="allHabits">View all habits</string>
+    <string name="completeHabit">Habit completed</string>
+    <string name="edit_your_habit">Edit your Habit</string>
+    <string name="habit_name_hint">What do you want to make a habit?</string>
+    <string name="sunday">Sunday</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="history">History</string>
+    <string name="save">Save</string>
 </resources>
